<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.BookSharing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_books"
        android:name="com.BookSharing.ui.gallery.GalleryFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_stationary_material"
        android:name="com.BookSharing.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_stationary_material"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_short_note"
        android:name="com.BookSharing.ui.tools.ToolsFragment"
        android:label="@string/menu_short_note"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.BookSharing.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.BookSharing.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>