<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_"
            android:title="Home" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_stationary_material"
            android:icon="@drawable/ic_content_cut"
            android:title="@string/menu_stationary_material" />
        <item
            android:id="@+id/nav_short_note"
            android:icon="@drawable/ic_border"
            android:title="@string/menu_short_note" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
